--- a/project/css/style.css
+++ b/project/css/style.css
@@ -702,7 +702,7 @@
         cursor: pointer;
     }
     
-    [class=.prato]
+    [class=prato]
     {
         margin-bottom: 4vh;
         margin-right: 4vh;
