--- a/project/css/style.css
+++ b/project/css/style.css
@@ -702,7 +702,7 @@
         cursor: pointer;
     }
     
-    [class=prato]
+    .prato
     {
         margin-bottom: 4vh;
         margin-right: 4vh;
@@ -727,6 +727,28 @@
     .prato r1
     {
         text-decoration:line-through;
+    }
+
+    .prato1
+    {
+        margin-bottom: 4vh;
+        margin-right: 4vh;
+        display: inline-block;
+        background-color:rgba(150, 150, 150, 0.5);
+        border: transparent;
+        box-shadow: 2px 2px 2px #969696;
+    }
+
+    .prato1 img
+    {
+        margin-top: -10vh;
+        width: 50%;
+        padding: 2vw;
+    }
+
+    .prato1 p
+    {
+        margin-top: -10vh;
     }
 
     .btncardapio
