--- a/project/css/style.css
+++ b/project/css/style.css
@@ -493,6 +493,32 @@
         padding: 2vw;
     }
     
+    .prato p
+    {
+        margin-top: -10vh;
+    }
+
+    .prato r1
+    {
+        text-decoration:line-through;
+    }
+
+    .btncardapio
+    {
+        width: 10vw;
+        margin-left: 43.5vw;
+        padding: 0.1vh;
+        border-radius: 10vw;
+        background-color: #fdda16;
+        cursor: pointer;
+    }
+
+    .btncardapio a
+    {
+        text-decoration: none;
+        color: #000;
+    }
+    
     .redes
     {
         margin-bottom: -40vh;
@@ -525,7 +551,7 @@
     
     .infos a:visited
     {
-        color: #fff;
+        color: #000;
     }
     
     .infos h2
@@ -535,6 +561,114 @@
         list-style: none;
         text-align: center;
     }
+       
+    /* CSS Sobre Nós */
+
+    .SVM
+    {
+        margin-top: 23vh;
+        margin-left: 2vw;
+        margin-right: 2vw;
+        margin-bottom: 3vh;
+    }
+
+    .SVM p
+    {
+        font-size: 3vh;
+    }
+
+    .SVM h3
+    {
+        margin-top: -1vh;
+    }
+
+    .SobreNos
+    {
+        font-size: 3vh;
+        padding: 2vh;
+        border-radius: 3vh;
+        display: right;
+        background-color: #fdda16;
+        color: #000;
+        text-align: center;
+    }
+    
+    .SobreNos img
+    {
+        float: left;
+        width: 50vw;
+        height: 87vh;
+        border-radius: 3vh;
+    }
+
+    .SobreNos p 
+    {
+        padding-left: 51vw;
+    }
+
+    .Valores
+    { 
+        height: 65vh;
+        padding: 2vh;
+        border-radius: 3vh;
+        display: left;
+        background-color: #fdda16;
+        color: #000;
+    }
+
+    .Valores img
+    {
+        float: right;
+        width: 50vw;
+        height: 65vh;
+        border-radius: 3vh;
+    }
+
+    .Valores h5
+    {
+        margin-top: -1vh;
+        margin-left: 5vw;
+        text-align: left;
+        font-size: 3.5vh;
+        cursor: pointer;
+    }
+    
+    .Valores h5:hover
+    {
+        text-decoration: underline;
+    }
+
+    .Valores p 
+    {
+        text-align: left;
+        margin-left: 5vw;
+        margin-top: -3vh;
+    }
+
+    .Missão
+    {
+        height: 57vh;
+        padding: 2vh;
+        border-radius: 3vh;
+        display: right;
+        color: #000;
+        background-color: #fdda16;
+    }
+
+    .Missão img
+    {
+        float: left;
+        width: 40vw;
+        height: 52vh;
+        padding-bottom: 10vh;
+    }
+    
+    .Missão p 
+    {
+        padding-left: 41vw;
+    }
+}
+
 }
 
 /* media query for desktops */
@@ -727,28 +861,6 @@
     .prato r1
     {
         text-decoration:line-through;
-    }
-
-    .prato1
-    {
-        margin-bottom: 4vh;
-        margin-right: 4vh;
-        display: inline-block;
-        background-color:rgba(150, 150, 150, 0.5);
-        border: transparent;
-        box-shadow: 2px 2px 2px #969696;
-    }
-
-    .prato1 img
-    {
-        margin-top: -10vh;
-        width: 50%;
-        padding: 2vw;
-    }
-
-    .prato1 p
-    {
-        margin-top: -10vh;
     }
 
     .btncardapio
